<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_text_label" />

    <EditText
        android:id="@+id/alertText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.06"
        android:inputType="text"
        android:singleLine="false"
        android:text="@string/alert_message" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/launch_code_label" />

    <TextView
        android:id="@+id/launchCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="---"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/launch_code_entry_label" >

    </TextView>

    <EditText
        android:id="@+id/launchCodeInput"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:text="" >

    </EditText>

    <Button
        android:id="@+id/redButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03"
        android:background="@drawable/red_button"
        android:enabled="false"
        android:text="Alarm auslösen"
        android:textColor="#FFFFFF" >

    </Button>

    <ProgressBar
        android:id="@+id/sendProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
